--- a/src/style.scss
+++ b/src/style.scss
@@ -133,3 +133,21 @@
 
   font-size: 16px !important;
 }
+
+
+/////
+
+// Mobile
+
+@media screen and (max-width: 768px) {
+  .popover-card {
+    background: white;
+    position: fixed;
+    top: 0; bottom: 0;
+    left: 0; right: 0;
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+  }
+}
